# Sea-out-NeRF

./: README.md  eval.py  render.py  train.py  train.sh  tsdf.py
experiment/: evaluate_metrics.py  main.py  pyproject.toml  requirements.txt
experiment/input/: metrics_cross_scenes.csv  metrics_cross_scenes.txt
experiment/input/Curasao/: metrics_360_wo.csv  metrics_3DGS.csv  metrics_Mipsplatting.csv  metrics_all.csv  metrics_all_ablations.csv  metrics_depth_wo.csv  metrics_forward_wo.csv  metrics_mipnerf.csv  metrics_original.csv  metrics_sample_wo.csv  metrics_seathru.csv  metrics_summary.csv  metrics_summary.txt
experiment/input/IUI3-RedSea/: metrics_360_wo.csv  metrics_3DGS.csv  metrics_Mipsplatting.csv  metrics_all.csv  metrics_all_ablations.csv  metrics_depth_wo.csv  metrics_forward_wo.csv  metrics_mipnerf.csv  metrics_original.csv  metrics_sample_wo.csv  metrics_seathru.csv  metrics_summary.csv  metrics_summary.txt
experiment/input/JapaneseGradens-RedSea/: metrics_360_wo.csv  metrics_3DGS.csv  metrics_Mipsplatting.csv  metrics_all.csv  metrics_all_ablations.csv  metrics_depth_wo.csv  metrics_forward_wo.csv  metrics_mipnerf.csv  metrics_original.csv  metrics_sample_wo.csv  metrics_seathru.csv  metrics_summary.csv  metrics_summary.txt
experiment/input/Panama/: metrics_360_wo.csv  metrics_3DGS.csv  metrics_GT.csv  metrics_Mipsplatting.csv  metrics_all.csv  metrics_all_ablations.csv  (+8 more)
experiment/scripts/: depth_colorize.sh  evaluate_watermark.sh  run.sh
experiment/src/: brightness_align.py  color_grid.py  depth_colorize.py  watermark_eval.py
(+20 files in other folders)
